--- a/Euler30/Euler30.csproj
+++ b/Euler30/Euler30.csproj
@@ -39,7 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Misc.cs" />
-    <Compile Include="DigitGen.cs" />
+    <Compile Include="Digits.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="v1.cs" />
